--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 </head>
 <body>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  <script>
-  </script>
+hi there buddy
 </body>
 </html>
