--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="delay_time; URL=https://www.nrk.no" />
+<meta http-equiv="refresh" content="delay_time;2" URL=https://www.nrk.no" />
