--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<html><head><meta http-equiv="refresh" content="delay_time;2" URL=https://www.nrk.no" /></head></html>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fi-FI">
+<head >
+ <meta HTTP-EQUIV="REFRESH" content="0; url=https://www.elementene.no/">
+</head>
+</html>
