--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="fi-FI">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="no-NO">
 <head >
  <meta HTTP-EQUIV="REFRESH" content="0; url=https://www.elementene.no/">
 </head>
